[project]
name = "powerplant-coding-challenge"
version = "0.1.0"
description = "Response from Martin Teller <martin@l1nx.it> to the GEM coding challenge"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.112.2",
    "scipy>=1.13.1",
    "numpy>=2.0.2",
    "uvicorn>=0.30.6",
    "psutil>=6.0.0",
]

[project.scripts]
run = "src.main:run"

[tool.poetry]
authors = [
    "Martin Teller <martin@l1nx.it>",
]

[tool.poetry.scripts]
run = "src.main:run"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "httpx>=0.27.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
